--- a/task0002/index.html
+++ b/task0002/index.html
@@ -9,7 +9,7 @@
         <div class="container">
             <h1>任务2 JavaScript基础 在线演示<span class="small-title">by Luoyin</span></h1>
             <div class="index-content">
-                <a target="_blank" href="task0002_1.html">小练习1：处理兴趣列表</a>
+                <a target="_blank" href="/ife/task0002/task0002_1.html">小练习1：处理兴趣列表</a>
                 <a target="_blank" href="task0002_2.html">小练习2：倒计时</a>
                 <a target="_blank" href="task0002_3.html">小练习3：图片轮播</a>
                 <a target="_blank" href="task0002_4.html">小练习4：输入框即时提示</a>
