--- a/task0002/task0002_1.html
+++ b/task0002/task0002_1.html
@@ -8,7 +8,11 @@
 
 <body>
   <div class="container">
-    
+    <h3>请输入您的爱好</h3>
+	<h5>爱好之间可以用逗号隔开</h5>
+    <form>
+	</form>
+	<button>请点击提交</button>
   </div>
 </body>
 </html>
