--- a/task0002/task0002_1.html
+++ b/task0002/task0002_1.html
@@ -11,9 +11,11 @@
     <h3>爱好显示</h3>
 		<span>请输入您的爱好(爱好之间可以用逗号隔开)：
 		  <input></input>
-          	<button>请点击提交</button>
-		
+          	<button>请点击提交</button>	
 		</span>
+	<div class="display">
+	123456
+	</div>
     
   </div>
 </body>
