--- a/task0002/task0002_1.html
+++ b/task0002/task0002_1.html
@@ -14,9 +14,12 @@
           	<button>请点击提交</button>	
 		</span>
 	<div class="display">
-	123456
+	
 	</div>
     
   </div>
-</body>
+  <script src="js/util.js"></script>
+  <script src="js/task0002_1.js"></script>
+
+ </body>
 </html>
