--- a/task0002/task0002_1.html
+++ b/task0002/task0002_1.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="zh-cmn-Hans">
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+<meta charset="UTF-8">
 <title>Demo 1</title>
  <link rel="stylesheet" href="css/style.css">
 </head>
