--- a/task0002/task0002_1.html
+++ b/task0002/task0002_1.html
@@ -18,8 +18,8 @@
 	</div>
     
   </div>
-  <script src="js/util.js" charset="UTF-8"></script>
-  <script src="js/task0002_1.js" charset="UTF-8"></script>
+  <script src="js/util.js" charset="GB2312"></script>
+  <script src="js/task0002_1.js" charset="GB2312"></script>
 
  </body>
 </html>
