--- a/task0002/task0002_2.html
+++ b/task0002/task0002_2.html
@@ -8,7 +8,7 @@
 
 <body>
   <div class="container">
-    <h3>计时器</h3>
+    <h3>倒计时</h3>
 		<span>请输入正确格式的日期，例如：2016-02-03<br>
 		  <input></input>
           	<button>开始计时</button>	
