--- a/task0002/index.html
+++ b/task0002/index.html
@@ -11,7 +11,7 @@
             <div class="index-content">
                 <a target="_blank" href="/ife/task0002/task0002_1.html">小练习1：处理兴趣列表</a>
                 <a target="_blank" href="/ife/task0002/task0002_2.html">小练习2：倒计时</a>
-                <a target="_blank" href="task0002_3.html">小练习3：图片轮播</a>
+                <a target="_blank" href="/ife/task0002/task0002_3.html">小练习3：图片轮播</a>
                 <a target="_blank" href="task0002_4.html">小练习4：输入框即时提示</a>
                 <a target="_blank" href="task0002_5.html">小练习5：拖拽交互</a>
             </div>
