--- a/task0002/task0002_3.html
+++ b/task0002/task0002_3.html
@@ -2,7 +2,7 @@
 <html lang="zh-cmn-Hans">
 <head>
 <meta charset="UTF-8">
-<title>Demo 2</title>
+<title>Demo 3</title>
  <link rel="stylesheet" href="css/style.css">
 </head>
 
@@ -12,11 +12,11 @@
 		<div class="imgRotation">
                 
                 <div class="img-list">
-                    <img src="images/1.jpg" alt="">
-                    <img src="images/2.jpg" alt="">
-                    <img src="images/3.jpg" alt="">
-                    <img src="images/4.jpg" alt="">
-                    <img src="images/5.jpg" alt="">
+                    <img src="/ife/task0001/image/1.jpg" alt="">
+                    <img src="/ife/task0001/image/2.jpg" alt="">
+                    <img src="/ife/task0001/image/3.jpg" alt="">
+                    <img src="/ife/task0001/image/4.jpg" alt="">
+                    <img src="/ife/task0001/image/5.jpg" alt="">
                 </div>
                 <div class="circle">
                     <a href="javascript:;" class="active"></a>
