--- a/task0002/index.html
+++ b/task0002/index.html
@@ -11,7 +11,7 @@
 	  </nav>
 	  <div class="right" id="navcircle">
 	    <ul>
-		  <li><a href="#"><span></span></a></li>
+		  <li><a href="#" class="active"><span></span></a></li>
 		  <li><a href="#"><span></span></a></li>
 		  <li><a href="#"><span></span></a></li>
 		  <li><a href="#"><span></span></a></li>
