--- a/task0002/index.html
+++ b/task0002/index.html
@@ -7,7 +7,7 @@
     </head>
     <body>
 	  <nav class="navbar">
-	    <div class="narbarheader">
+	    <div class="navbarheader">
 		Demo Board
 		</div>
 	  </nav>
