--- a/task0002/index.html
+++ b/task0002/index.html
@@ -8,8 +8,8 @@
     <body>
 	  <nav class="navbar">
 	    <div class="navbarheader">
-		Demo Board
-		</div>
+		<span>Demo  Board</span>
+	    </div>
 	  </nav>
 	  <div class="right" id="navcircle">
 	    <ul>
