--- a/task0002/index.html
+++ b/task0002/index.html
@@ -8,8 +8,8 @@
     <body>
 	  <nav class="navbar">
 	    <div class="navbarheader">
-		<span>Demo  Board</span>
-	    </div>
+		Demo  Board	    
+		</div>
 	  </nav>
 	  <div class="right" id="navcircle">
 	    <ul>
