--- a/task0002/index.html
+++ b/task0002/index.html
@@ -8,7 +8,7 @@
     <body>
 	  <nav class="navbar">
 	    <div class="navbarheader">
-		Demo  Board	    
+		<span>Demo  Board</span>	    
 		</div>
 	  </nav>
 	  <div class="right" id="navcircle">
