--- a/task0002/index.html
+++ b/task0002/index.html
@@ -11,6 +11,38 @@
 		<span>Demo  Board</span>	    
 		</div>
 	  </nav>
+	  <div class="" id="fullpage">
+	    <div class="displayzone displaycolor1">
+		  <div class="middle">
+		  123456
+		  </div>
+		</div>
+		<div class="displayzone displaycolor2">
+		  <div class="middle">
+		  123456
+		  </div>
+		</div>
+		<div class="displayzone displaycolor3">
+		  <div class="middle">
+		  123456
+		  </div>
+		</div>
+		<div class="displayzone displaycolor4">
+		  <div class="middle">
+		  123456
+		  </div>
+		</div>
+		<div class="displayzone displaycolor5">
+		  <div class="middle">
+		  123456
+		  </div>
+		</div>
+		<div class="displayzone displaycolor6">
+		  <div class="middle">
+		  123456
+		  </div>
+		</div>
+	  </div>
 	  <div class="right" id="navcircle">
 	    <ul>
 		  <li><a href="#" class="beactive"><span></span></a></li>
