--- a/task0002/index.html
+++ b/task0002/index.html
@@ -14,7 +14,9 @@
 	  <div class="" id="fullpage">
 	    <div class="displayzone displaycolor1">
 		  <div class="middle">
-		  123456
+		    <div class="displaytitle">
+			  <span>任务一</span>
+		    </div>
 		  </div>
 		</div>
 		<div class="displayzone displaycolor2">
