--- a/task0002/index.html
+++ b/task0002/index.html
@@ -21,27 +21,37 @@
 		</div>
 		<div class="displayzone displaycolor2">
 		  <div class="middle">
-		  123456
+		    <div class="displaytitle">
+			  <span>任务二</span>
+		    </div>
 		  </div>
 		</div>
 		<div class="displayzone displaycolor3">
 		  <div class="middle">
-		  123456
+		    <div class="displaytitle">
+			  <span>任务三</span>
+		    </div>
 		  </div>
 		</div>
 		<div class="displayzone displaycolor4">
 		  <div class="middle">
-		  123456
+		    <div class="displaytitle">
+			  <span>任务四</span>
+		    </div>
 		  </div>
 		</div>
 		<div class="displayzone displaycolor5">
 		  <div class="middle">
-		  123456
+		    <div class="displaytitle">
+			  <span>任务五</span>
+		    </div>
 		  </div>
 		</div>
 		<div class="displayzone displaycolor6">
 		  <div class="middle">
-		  123456
+		    <div class="displaytitle">
+			  <span>任务六</span>
+		    </div>
 		  </div>
 		</div>
 	  </div>
