--- a/task0002/index.html
+++ b/task0002/index.html
@@ -17,6 +17,9 @@
 		    <div class="displaytitle">
 			  <span>任务一</span>
 		    </div>
+			<div class="displaycontent">
+			  <span>整理用户输入的爱好，允许用户允许用户用换行、空格（全角/半角）、逗号（全角/半角）、顿号、分号来作为不同爱好的分隔</span>
+			</div>
 		  </div>
 		</div>
 		<div class="displayzone displaycolor2">
