--- a/task0002/index.html
+++ b/task0002/index.html
@@ -60,6 +60,14 @@
 			  <span>任务四</span>
 		    </div>
 		    <div class="displaycontent">
+			<span>实现类似百度搜索框的搜索提示功能</span><br>
+			<span>
+			<ul>
+			<li>允许使用鼠标点击选中提示栏中的某个选项</li>
+			<li>允许使用键盘上下键来选中提示栏中的某个选项，回车确认选中</li>
+			<li>选中后，提示内容变更到输入框中</li>
+			</ul>
+			</span>
 			</div>
 		</div>
 		<div class="displayzone displaycolor5">
@@ -68,16 +76,24 @@
 			  <span>任务五</span>
 		    </div>
 		    <div class="displaycontent">
+			<span>界面拖拽交互</span><br>
+			<span>
+			<ul>
+            <li>实现一个可拖拽交互的界面</li>
+			<li>如示例图，左右两侧各有一个容器，里面的选项可以通过拖拽来左右移动</li>
+			<li>被选择拖拽的容器在拖拽过程后，在原容器中消失，跟随鼠标移动</li>
+			<li>注意拖拽释放后，要添加到准确的位置</li>
+			<li>拖拽到什么位置认为是可以添加到新容器的规则自己定</li>
+			<li>注意交互中良好的用户体验和使用引导
+</li>			
+			</ul>
+			</span>
+			</div>
+			<div class="displayboard">
+			<img class="displayimg" src="/ife/task0002/image/drag.png">
 			</div>
 		</div>
-		<div class="displayzone displaycolor6">
-		  
-		    <div class="displaytitle">
-			  <span>任务六</span>
-		    </div>
-		    <div class="displaycontent">
-			</div>
-		</div>
+		
 	  </div>
 	  <div class="right" id="navcircle">
 	    <ul>
