--- a/task0002/index.html
+++ b/task0002/index.html
@@ -16,6 +16,7 @@
 			  <span>整理用户输入的爱好，允许用户允许用户用换行、空格（全角/半角）、逗号（全角/半角）、顿号、分号来作为不同爱好的分隔</span>
 			</div>
 		    <div class="displayboard">
+			<span><a>Demo</a></span>
 			</div>
 		</div>
 		<div class="displayzone displaycolor2">
@@ -36,6 +37,9 @@
 			</ul>
 			</span>
 			</div>
+			<div class="displayboard">
+			<span><a>Demo</a></span>
+			</div>
 		</div>
 		<div class="displayzone displaycolor3">
 		  
@@ -53,6 +57,9 @@
 			</ul>
 			</span>
 			</div>
+			<div class="displayboard">
+			<span><a>Demo</a></span>
+			</div>
 		</div>
 		<div class="displayzone displaycolor4">
 		  
@@ -68,6 +75,9 @@
 			<li>选中后，提示内容变更到输入框中</li>
 			</ul>
 			</span>
+			</div>
+			<div class="displayboard">
+			<span><a>Demo</a></span>
 			</div>
 		</div>
 		<div class="displayzone displaycolor5">
@@ -90,7 +100,7 @@
 			</span>
 			</div>
 			<div class="displayboard">
-			<img class="displayimg" src="/ife/task0002/image/drag.png">
+			<span><a>Demo</a></span>
 			</div>
 		</div>
 		
