--- a/task0002/index.html
+++ b/task0002/index.html
@@ -16,7 +16,7 @@
 			  <span>整理用户输入的爱好，允许用户允许用户用换行、空格（全角/半角）、逗号（全角/半角）、顿号、分号来作为不同爱好的分隔</span>
 			</div>
 		    <div class="displayboard">
-			<span><a>Demo</a></span>
+			<a href="/ife/task0002/task0002_1.html">Demo</a>
 			</div>
 		</div>
 		<div class="displayzone displaycolor2">
@@ -38,7 +38,7 @@
 			</span>
 			</div>
 			<div class="displayboard">
-			<span><a>Demo</a></span>
+			<a href="/ife/task0002/task0002_2.html">Demo</a>
 			</div>
 		</div>
 		<div class="displayzone displaycolor3">
@@ -58,7 +58,7 @@
 			</span>
 			</div>
 			<div class="displayboard">
-			<span><a>Demo</a></span>
+			<a href="/ife/task0002/task0002_3.html">Demo</a>
 			</div>
 		</div>
 		<div class="displayzone displaycolor4">
@@ -77,7 +77,7 @@
 			</span>
 			</div>
 			<div class="displayboard">
-			<span><a>Demo</a></span>
+			<a href="#">Demo</a>
 			</div>
 		</div>
 		<div class="displayzone displaycolor5">
@@ -100,7 +100,7 @@
 			</span>
 			</div>
 			<div class="displayboard">
-			<span><a>Demo</a></span>
+			<a href="#">Demo</a>			
 			</div>
 		</div>
 		
