--- a/task0002/index.html
+++ b/task0002/index.html
@@ -28,7 +28,7 @@
 			<span>实现倒计时器</span><br>
 			<span>
 			<ul>
-			<li>界面首先有一个文本输入框，允许按照特定的格式YYYY-MM-DD输入年月日；</li>
+			<li>界面首先有一个文本输入框，允许按照特定的格式YYYY-MM-DD输入年月日</li>
 			<li>输入框旁有一个按钮，点击按钮后，计算当前距离输入的日期的00:00:00有多少时间差</li>
             <li>在页面中显示，距离YYYY年MM月DD日还有XX天XX小时XX分XX秒
 </li>
