--- a/task0002/index.html
+++ b/task0002/index.html
@@ -5,6 +5,7 @@
         <title>Demo Board</title>
         <link rel="stylesheet" href="css/style.css">
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fullPage.js/2.7.7/jquery.fullPage.css">
+		<script type="text/javascript" href="/ife/task0002/js/jquery1.7.2.min.js"></script>
 		<script type="text/javascript" href="https://cdnjs.cloudflare.com/ajax/libs/fullPage.js/2.7.7/jquery.fullPage.js"></script>
 		<script type="text/javascript" href="https://cdnjs.cloudflare.com/ajax/libs/fullPage.js/2.7.7/vendors/jquery.easings.min.js"></script>
 		<script type="text/javascript" href="https://cdnjs.cloudflare.com/ajax/libs/fullPage.js/2.7.7/vendors/jquery.slimscroll.js"></script>
