--- a/task0002/index.html
+++ b/task0002/index.html
@@ -11,6 +11,7 @@
 		<script type="text/javascript" href="https://cdnjs.cloudflare.com/ajax/libs/fullPage.js/2.7.7/vendors/jquery.easings.min.js"></script>
 		<script type="text/javascript" href="https://cdnjs.cloudflare.com/ajax/libs/fullPage.js/2.7.7/vendors/jquery.slimscroll.js"></script>
 		<script type="text/javascript">
+		var $ = jQuery;
 		$(document).ready(function() {
 			$('#fullpage').fullpage({
 				sectionsColor: ['#6090b6', '#4FC5C7', '#97EC71', '#DE9DE6', '#FA6E86'],
