--- a/task0002/index.html
+++ b/task0002/index.html
@@ -3,13 +3,13 @@
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8" /> 
         <title>Demo Board</title>
-		<script type="text/javascript" href="js/jquery1.7.2.min.js"></script>
+		
         <link rel="stylesheet" href="css/style.css">
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fullPage.js/2.7.7/jquery.fullPage.css">
-		
-		<script type="text/javascript" href="https://cdnjs.cloudflare.com/ajax/libs/fullPage.js/2.7.7/jquery.fullPage.js"></script>
-		<script type="text/javascript" href="https://cdnjs.cloudflare.com/ajax/libs/fullPage.js/2.7.7/vendors/jquery.easings.min.js"></script>
-		<script type="text/javascript" href="https://cdnjs.cloudflare.com/ajax/libs/fullPage.js/2.7.7/vendors/jquery.slimscroll.js"></script>
+		<script type="text/javascript" src="js/jquery1.7.2.min.js"></script>
+		<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/fullPage.js/2.7.7/jquery.fullPage.js"></script>
+		<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/fullPage.js/2.7.7/vendors/jquery.easings.min.js"></script>
+		<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/fullPage.js/2.7.7/vendors/jquery.slimscroll.js"></script>
 		<script type="text/javascript">
 		$(document).ready(function() {
 			$('#fullpage').fullpage({
