--- a/task0002/index.html
+++ b/task0002/index.html
@@ -121,9 +121,9 @@
 		</div>
 		
 	  </div>
-	  <div class="right" id="menu">
-	    <ul>
-		  <li data-menuanchor="firstPage"><a href="#firstPage" class="beactive"><span></span></a></li>
+	  <div class="right" >
+	    <ul id="menu">
+		  <li data-menuanchor="firstPage"><a href="#firstPage"><span></span></a></li>
 		  <li data-menuanchor="secondPage"><a href="#secondPage"><span></span></a></li>
 		  <li data-menuanchor="3rdPage"><a href="#3rdPage"><span></span></a></li>
 		  <li data-menuanchor="4thpage"><a href="#4thpage"><span></span></a></li>
