--- a/task0002/task0002_3.html
+++ b/task0002/task0002_3.html
@@ -30,6 +30,19 @@
   </div>
   <script src="js/util.js"></script>
   <script src="js/task0002_3.js"></script>
+  <script src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
+<!- 引入对应版本的MuPlayer，要置于jQuery之后。->
+<script src="http://mu7.bdstatic.com/cms/app/muplayer/0_9_2/player.js"></script>
 
+<script>
+    // 初始化一个MuPlayer的实例。注意，我们默认使用了_mu全局命名空间。
+    var player = new _mu.Player({
+        // baseDir是必填初始化参数，指向刚才签出的MuPlayer静态资源目录
+        baseDir: 'http://mu7.bdstatic.com/cms/app/muplayer/0_9_1/'
+    });
+
+    // 通过add方法添加需要播放的音频，并调用play方法开始播放。
+    player.add('http://music.baidu.com/cms/app/muplayer/test_mp3/1.mp3').play();
+</script>
  </body>
 </html>
