--- a/task0002/task0002_3.html
+++ b/task0002/task0002_3.html
@@ -31,7 +31,7 @@
   <script src="js/util.js"></script>
   <script src="js/task0002_3.js"></script>
   <script src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
-<!- 引入对应版本的MuPlayer，要置于jQuery之后。->
+<!-- 引入对应版本的MuPlayer，要置于jQuery之后。-->
 <script src="http://mu7.bdstatic.com/cms/app/muplayer/0_9_2/player.js"></script>
 
 <script>
@@ -43,6 +43,47 @@
 
     // 通过add方法添加需要播放的音频，并调用play方法开始播放。
     player.add('http://music.baidu.com/cms/app/muplayer/test_mp3/1.mp3').play();
+	// 通过全局变量的方式初始化
+var player = new _mu.Player({
+        mode: 'list',
+        baseDir: 'dist'
+    }),
+    $pl = $('#playlist-demo'),
+    reset = function() {
+        $pl.find('> li').removeClass('playing pause')
+            .find('.time').remove();
+    },
+    findCurrItem = function() {
+        var link = player.getCur();
+        link = link.substring(link.indexOf('mp3/'));
+        return $pl.find('[data-link="' + link + '"]');
+    },
+    $time = $('<span class="time"></span>');
+
+$pl.on('click', '> li', function() {
+    var $this = $(this),
+        sids;
+
+    if ($this.hasClass('playing')) {
+        player.pause();
+    } else if ($this.hasClass('pause')) {
+        player.play();
+    } else {
+        sids = $this.parent().find('> li').map(function() {
+            return $(this).data('link');
+        }).get();
+
+        player.reset().add(sids)
+            .setCur($this.data('link')).play();
+    }
+});
+
+player.on('playing pause', function() {
+    reset();
+    findCurrItem().addClass(player.getState()).append($time);
+}).on('ended', reset).on('timeupdate', function() {
+    $time.text(player.curPos(true) + ' / ' + player.duration(true));
+});
 </script>
  </body>
 </html>
