--- a/task0002/task0002_3.html
+++ b/task0002/task0002_3.html
@@ -32,7 +32,7 @@
   <script src="js/task0002_3.js"></script>
   <script src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
 <!-- 引入对应版本的MuPlayer，要置于jQuery之后。-->
-<script src="http://mu7.bdstatic.com/cms/app/muplayer/0_9_2/player.js"></script>
+<script src="js/player.js"></script>
 
 <script>
     // 初始化一个MuPlayer的实例。注意，我们默认使用了_mu全局命名空间。
