--- a/task0002/task0002_3.html
+++ b/task0002/task0002_3.html
@@ -42,7 +42,7 @@
     });
 
     // 通过add方法添加需要播放的音频，并调用play方法开始播放。
-    player.add('http://music.baidu.com/cms/app/muplayer/test_mp3/1.mp3').play();
+    player.add('mp3/Tell Me If You Wanna Go Home.mp3').play();
 	
 </script>
  </body>
