--- a/task0002/task0002_1.html
+++ b/task0002/task0002_1.html
@@ -9,16 +9,14 @@
 <body>
   
   <div class="container">
-    
+    <div class="row">
     <h3>爱好显示</h3>
-		<span>请输入您的爱好(爱好之间可以用逗号隔开)：<br>
-		  <textarea></textarea>
-          	<button>请点击提交</button>	
+		<span>请输入您的爱好：<br>
+		  <textarea class="form-control" rows="3"></textarea>
+          	<button class="btn-info">请点击提交</button>	
 		</span>
-	<div class="display">
-	
-	</div>
-    
+	<div class="display"></div>
+    </div>
   </div>
   <script src="js/util.js"></script>
   <script src="js/task0002_1.js"></script>
