--- a/task0002/task0002_1.html
+++ b/task0002/task0002_1.html
@@ -11,10 +11,10 @@
   <div class="container">
     <div class="row">
     <h3>爱好显示</h3>
-		<span>请输入您的爱好：<br>
+		<span>请输入您的爱好：</span><br>
 		  <textarea class="form-control" rows="3"></textarea>
           	<button class="btn-info">请点击提交</button>	
-		</span>
+		
 	<div class="display"></div>
     </div>
   </div>
