--- a/task0002/task0002_1.html
+++ b/task0002/task0002_1.html
@@ -15,7 +15,11 @@
 		  <textarea class="form-control" rows="3"></textarea>
           	<button class="btn btn-info">请点击提交</button>	
 		
-	<div class="display"></div>
+	<div class="display">
+	经过整理，您的爱好为：
+	<div class="hobby">
+	</div>
+	</div>
     </div>
   </div>
   <script src="js/util.js"></script>
