--- a/task0002/task0002_1.html
+++ b/task0002/task0002_1.html
@@ -10,7 +10,7 @@
   
   <div class="container">
     <div class="row">
-    <h3>爱好显示</h3>
+    <h3>爱好整理</h3>
 		<span>请输入您的爱好：</span><br>
 		  <textarea class="form-control" rows="3"></textarea>
           	<button class="btn btn-info">请点击提交</button>	
